# servant-crud-generic

./: README.md  servant-crud-generic.cabal
src/Servant/: Crud.hs
src/Servant/Crud/: Generic.hs
test/Servant/Crud/: GenericSpec.hs
