name: servant-crud-generic
version: 0.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
copyright: 2015 brady.ouren <brady.ouren@gmail.com>
maintainer: brady.ouren <brady.ouren@gmail.com>
synopsis: Auto-generate a CRUD API for your datatype
description:
    Auto-generate a CRUD API for your datatype
category: Web
author: brady.ouren <brady.ouren@gmail.com>
extra-source-files:
  README.md

source-repository head
  type:     git
  location: https://github.com/tippenein/servant-crud-generic

library
  hs-source-dirs: src
  exposed-modules:
      Servant.Crud
      Servant.Crud.Generic
  build-depends:
      base ==4.*
    , text
    , servant >= 0.4
    , servant-client >= 0.4
  default-language: Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
      base -any
    , servant-crud-generic -any
    , hspec ==2.*
    , HUnit -any
    , QuickCheck -any
  default-language:    Haskell2010
  other-modules:
      ServantCrudSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fno-warn-missing-signatures

flag ekg
  manual: True
  default: False
  description: Compile with ekg monitoring.
